<resources>
    <string name="app_name">Wall</string>
    <string name="title_activity_display_full" translatable="false">DisplayFull</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about" translatable="false">About Me</string>
    <string name="source_name" translatable="false">Wall</string>
    <string name="source_description" translatable="false">Wall is better with muzei !</string>

    <!-- Drawer UI -->
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="nav_item_home" translatable="false">Home</string>
    <string name="nav_item_local">Wall local</string>
    <string name="nav_item_buy" translatable="false">Donate</string>
    <string name="nav_item_setting">Settings</string>
    <string name="nav_item_about">About</string>

    <!-- Setting UI -->
    <string name="settings_of_interface">Settings of interface</string>
    <string name="use_night_mode">Use night mode</string>
    <string name="always_use_two_columns">Always use two columns</string>
    <string name="applied_ui_settings">It will be applied at the next reboot of the app</string>
    <string name="settings_for_sd" translatable="false">Storage/SD</string>
    <string name="allow_the_app_to_read_and_write_memory">Allow the app to read and write memory</string>
    <string name="change_the_directory_of_downloaded_wallpapers">Change the directory of downloaded wallpapers</string>
    <string name="information_of_app">Information of app</string>

    <string name="can_download_wall">You can download the wallpaper !</string>
    <string name="cant_download_wall">You can\'t download the wallpaper :(</string>

    <!-- Fragment Home -->
    <string name="dialog_option">Option</string>
    <string name="dialog_list_set_wall">Set as wallpaper</string>
    <string name="dialog_list_download" translatable="false">Download</string>
    <string name="toast_info_downloaded">Downloaded !!</string>
    <string name="dialog_downloading">Downloading ...</string>
    <string name="toast_info_set_wall">DONE :D</string>
    <string name="menu_item_one_row">One row</string>
    <string name="menu_item_two_row">Two row</string>

    <!-- Intro -->
    <string name="title_activity_welcome" translatable="false">Home Screen</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="start" translatable="false">GOT IT</string>

    <string name="slide_1_title" translatable="false">Hello to Wall!</string>
    <string name="slide_1_desc" translatable="false">Find cool wallpapers!</string>

    <string name="slide_2_title">Download it !</string>
    <string name="slide_2_desc">You do a long press onto the FAB</string>

    <string name="slide_3_title">Upload a wallpaper</string>
    <string name="slide_3_desc">If you want you cand upload your cool wallpaper to our server !</string>

    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again" translatable="false">Play Again</string>
    <string name="no_walls_downloaded" translatable="false">No walls downloaded yet</string>


    <!-- Shortcuts -->
    <string name="static_setting_shortcut_long_label">Setting WallApp</string>
    <string name="static_setting_shortcut_short_label">Setting</string>
    <string name="static_setting_shortcut_disabled_message">Disabled</string>
    <string name="static_local_shortcut_long_label">Downloaded Wallpapers</string>
    <string name="static_local_shortcut_short_label">Downloaded</string>
    <string name="static_local_shortcut_disabled_message">Disabled</string>

    <!-- Wallpaper option -->
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="wallpaper_option_home_screen">Home screen</string>
    <string name="wallpaper_option_lock_screen">Lock screen</string>
    <string name="wallpaper_option_home_screen_and_lock_screen">Both</string>
    <string name="wallpaper_snack_to_set">Long press to apply wallpaper</string>

    <string name="transition_thumb" translatable="false">thumb</string>
    <string name="wallpaper_set">Wallpaper set :D</string>
    <string name="title_activity_demo">Demo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
